@@ -1,6 +1,7 @@
 == 2.7.18 ==
 Release date: 
 * Fixed: Counter - Subtitle was not showing in editor
+* Fixed: Info Box - Image shrink issue with left and right alignment
 * Security Fix: Improved code security in PowerPack widgets
 
 == 2.7.17 ==
